--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,32 @@
 spring.application.name=DSA_Proj
 server.port=8080
 
+# ===============================
 # PostgreSQL Database Configuration
+# ===============================
 spring.datasource.url=jdbc:postgresql://localhost:5432/gosteldb1
 spring.datasource.username=postgres
 spring.datasource.password=harshitha
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hibernate Dialect for PostgreSQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# Hibernate DDL Auto
+# ===============================
+# JPA / Hibernate Configuration
+# ===============================
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 # Show SQL in console
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
-# Disable H2 console
-spring.h2.console.enabled=false
+# ===============================
+# SQL Initialization
+# ===============================
+spring.sql.init.mode=never
+spring.jpa.defer-datasource-initialization=true
+
+# ===============================
+# Naming Strategy (optional but fine)
+# ===============================
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
