--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,17 @@ spring.application.name=DSA_Proj
 server.port=8080
 
 # ===============================
-# PostgreSQL Database Configuration
+# H2 Database Configuration  
 # ===============================
-spring.datasource.url=jdbc:postgresql://localhost:5432/gosteldb1
-spring.datasource.username=postgres
-spring.datasource.password=harshitha
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:h2:file:./data/gosteldb1
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 
 # ===============================
 # JPA / Hibernate Configuration
 # ===============================
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 # Show SQL in console
@@ -22,7 +22,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # ===============================
 # SQL Initialization
 # ===============================
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
 # ===============================
